Final task, the connection between the user and the tasks
